(fix|COS-2294): Fix tags alignment (#5985)

--- a/packages/apps/spaces/styles/remirror-editor.scss
+++ b/packages/apps/spaces/styles/remirror-editor.scss
@@ -3765,7 +3765,7 @@ a {
 }
 
 .customeros-logger .remirror-editor-wrapper {
-  min-height: 102px;
+  min-height: 130px;
 }
 .customeros-logger .remirror-editor,
 .customeros-logger .remirror-is-empty {
